# gomodule-proxy

./: .gitignore  BUILD.bazel  LICENSE  MODULE.bazel  Makefile  WORKSPACE  command.go  config.go  config.yaml  fetcher.go  fetcher_test.go  go.mod  go.sum  go.work.sum  main.go  proxy.go  server.go
cmd/gomodule-proxy/: BUILD.bazel  command.go  main.go
cmd/gomodule-proxy/internal/config/: BUILD.bazel  config.go
internal/gomodule/: BUILD.bazel  fetcher.go  fetcher_test.go  proxy.go  server.go
