load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

gazelle(name = "gazelle")

# gazelle:prefix go.f110.dev/gomodule-proxy

go_library(
    name = "gomodule-proxy_lib",
    srcs = [
        "command.go",
        "main.go",
        "server.go",
    ],
    importpath = "go.f110.dev/gomodule-proxy",
    visibility = ["//visibility:private"],
    deps = [
        "//vendor/github.com/julienschmidt/httprouter",
        "//vendor/github.com/spf13/cobra",
        "//vendor/github.com/spf13/pflag",
        "//vendor/golang.org/x/xerrors",
    ],
)

go_binary(
    name = "gomodule-proxy",
    embed = [":gomodule-proxy_lib"],
    visibility = ["//visibility:public"],
)
