bazel_dep(name = "rules_go", version = "0.55.1")
bazel_dep(name = "gazelle", version = "0.44.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.24.4")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.gazelle_override(
    build_file_generation = "clean",
    path = "go.f110.dev/xerrors",
)
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_go_git_go_git_v5",
    "com_github_go_logr_logr",
    "com_github_go_logr_zapr",
    "com_github_google_go_github_v40",
    "com_github_gorilla_mux",
    "com_github_spf13_cobra",
    "com_github_spf13_pflag",
    "com_github_stretchr_testify",
    "dev_f110_go_xerrors",
    "in_gopkg_yaml_v2",
    "org_golang_x_mod",
    "org_golang_x_oauth2",
    "org_golang_x_tools_go_vcs",
    "org_uber_go_zap",
)
