load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "gomodule-proxy_lib",
    srcs = [
        "command.go",
        "main.go",
    ],
    importpath = "go.f110.dev/gomodule-proxy/cmd/gomodule-proxy",
    visibility = ["//visibility:private"],
    deps = [
        "//cmd/gomodule-proxy/internal/config",
        "//internal/gomodule",
        "@com_github_go_logr_logr//:logr",
        "@com_github_go_logr_zapr//:zapr",
        "@com_github_google_go_github_v40//github",
        "@com_github_spf13_cobra//:cobra",
        "@com_github_spf13_pflag//:pflag",
        "@dev_f110_go_xerrors//:xerrors",
        "@org_golang_x_oauth2//:oauth2",
        "@org_uber_go_zap//:zap",
    ],
)

go_binary(
    name = "gomodule-proxy",
    embed = [":gomodule-proxy_lib"],
    visibility = ["//visibility:public"],
)
