load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "gomodule",
    srcs = [
        "fetcher.go",
        "proxy.go",
        "server.go",
    ],
    importpath = "go.f110.dev/gomodule-proxy/internal/gomodule",
    visibility = ["//:__subpackages__"],
    deps = [
        "@com_github_go_git_go_git_v5//:go-git",
        "@com_github_go_git_go_git_v5//plumbing",
        "@com_github_go_git_go_git_v5//plumbing/filemode",
        "@com_github_go_git_go_git_v5//plumbing/object",
        "@com_github_go_logr_logr//:logr",
        "@com_github_google_go_github_v40//github",
        "@com_github_gorilla_mux//:mux",
        "@dev_f110_go_xerrors//:xerrors",
        "@org_golang_x_mod//modfile",
        "@org_golang_x_mod//semver",
        "@org_golang_x_tools_go_vcs//:vcs",
    ],
)

go_test(
    name = "gomodule_test",
    srcs = ["fetcher_test.go"],
    embed = [":gomodule"],
    deps = [
        "@com_github_go_git_go_git_v5//:go-git",
        "@com_github_go_git_go_git_v5//plumbing/object",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@org_golang_x_tools_go_vcs//:vcs",
    ],
)
