load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "config",
    srcs = ["config.go"],
    importpath = "go.f110.dev/gomodule-proxy/cmd/gomodule-proxy/internal/config",
    visibility = ["//cmd/gomodule-proxy:__subpackages__"],
    deps = [
        "@dev_f110_go_xerrors//:go_default_library",
        "@in_gopkg_yaml_v2//:go_default_library",
    ],
)
