load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "config",
    srcs = ["config.go"],
    importpath = "go.f110.dev/gomodule-proxy/cmd/gomodule-proxy/internal/config",
    visibility = ["//cmd/gomodule-proxy:__subpackages__"],
    deps = [
        "@dev_f110_go_xerrors//:xerrors",
        "@in_gopkg_yaml_v2//:yaml_v2",
    ],
)
